# voxel-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  imgui.ini
assets/shaders/: shader.fs  shader.vs
src/: camera.cpp  camera.h  chunk.cpp  chunk.h  context.h  cube.h  main.cpp  shader.cpp  shader.h  vertex.h  window.cpp  window.h  world.cpp  world.h
